[gd_scene load_steps=4 format=3 uid="uid://bq3huk364skd3"]

[ext_resource type="Theme" uid="uid://b4apxgfyaatns" path="res://ui_theme/theme.tres" id="1_sb8mv"]
[ext_resource type="Script" path="res://scripts/image_loader.gd" id="2_abcde"]
[ext_resource type="Script" path="res://scripts/image_pool.gd" id="3_fghij"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sb8mv")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
flat = true

[node name="File" type="PopupMenu" parent="Panel/VBoxContainer/MenuBar"]
visible = true
item_count = 2
item_0/text = "Open"
item_0/id = 0
item_1/text = "Export"
item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SidePanel_VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="GlobalConfig_FoldableContainer" type="FoldableContainer" parent="Panel/VBoxContainer/HBoxContainer/SidePanel_VBoxContainer"]
layout_mode = 2

[node name="ImagePool_FoldableContainer" type="FoldableContainer" parent="Panel/VBoxContainer/HBoxContainer/SidePanel_VBoxContainer"]
layout_mode = 2

[node name="ImagePool_ItemList" type="ItemList" parent="Panel/VBoxContainer/HBoxContainer/SidePanel_VBoxContainer/ImagePool_FoldableContainer"]
layout_mode = 2
script = ExtResource("3_fghij")

[node name="ArtBoard_SubViewportContainer" type="SubViewportContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
stretch = true

[node name="ArtBoard_SubViewport" type="SubViewport" parent="Panel/VBoxContainer/HBoxContainer/ArtBoard_SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 68)
render_target_update_mode = 4

[node name="ImageLoader" type="Node" parent="."]
script = ExtResource("2_abcde")

[connection signal="id_pressed" from="Panel/VBoxContainer/MenuBar/File" to="ImageLoader" method="open_file_dialog" binds=[0]]
